[tool.poetry]
name = "dokku_postgres_backup"
version = "0.1.0"
description = "Backup utility for Postgres on Dokku"
authors = ["Jonathan Lloyd <jonathan@thisisjonathan.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
